# mule

./: .gitignore  Cargo.toml
.zed/: settings.json
crates/mule-cli/: Cargo.toml  README.md  justfile
crates/mule-cli/src/: open.rs  view_gb.rs
crates/mule-macho/: Cargo.toml
crates/mule-macho/src/: lib.rs
crates/mule-viewer/: Cargo.toml  index.html  justfile
crates/mule-viewer/src/: app.rs  hex.rs  main.rs  toggle.rs  util.rs  view.rs  view_gb.rs
src/: hex.rs  macho.rs  macho_view.rs  main.rs  open.rs  view.rs  view_gb.rs  view_macho.rs
