[package]
name = "mule-viewer"
version = "0.1.0"
edition = "2024"

[features]
web = []
debug = []

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
log = "0.4.29"
web-sys = { version = "0.3.83", features = ["FileList", "File", "HtmlInputElement"] }
image = { version = "0.25.9", default-features = false, features = ["png"] }
gloo-net = "0.6.0"
rfd = "0.17.1"
poll-promise = { version = "0.3.0", features = ["web"] }

mule_gb = { path = "../mule-gb/" }
psy = { path = "../../../psy/" }

[profile.release]
opt-level = "s"
